<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.may.android.contactcard.MainActivity">
<RelativeLayout


    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/background">



    <ImageView
        android:src="@drawable/itwm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView"
        android:paddingTop="8dp"
        android:contentDescription="@string/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/title"
        android:id="@+id/textView"
        android:textColor="@color/textColor"
        android:textSize="@dimen/textSize_big"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:paddingBottom="8dp"
        android:paddingRight="4dp"
        android:paddingLeft="4dp"
        android:fontFamily="sans-serif-condensed"/>

    <ImageView
        android:src="@drawable/car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_below="@+id/textView"
        android:id="@+id/imageView2"
        android:contentDescription="@string/car" />

    <TextView
        android:padding="4dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phrase"
        android:textColor="@color/textColor"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        android:textStyle="italic"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/backroung2"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/mail_g"
                    android:layout_margin="10dp"
                    android:id="@+id/mailsymb"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mail"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    android:layout_gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/anruf_g"
                    android:id="@+id/telesymb"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Phone"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/place_g"
                    android:id="@+id/ortssymb"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Adress"
                    android:textColor="@color/white"
                    android:layout_margin="8dp"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>
</ScrollView>

